<resources>
    <string name="card_number">Card Number</string>
    <string name="hint_card_number" translatable="false">1234 5678 9012 3456</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="hint_expiry_date">MM/YY</string>
    <string name="cvc_cvv" translatable="false">CVC/CVV</string>
    <string name="hint_cvc_cvv" translatable="false">123</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="hint_cardholder_name">John Snow</string>
    <string name="pay_with_amount">Pay %1$s</string>
    <string name="remember_card_hint">Remember card</string>
    <string name="title_card_details">Card Details</string>
    <string name="card_number_of_installments">Number of installments</string>
    <string name="title_payment_methods">Payment Methods</string>
    <string name="bank_account_number">Bank account number (IBAN)</string>
    <string name="hint_iban_number">NL53 ABNA 1925 1294 122</string>
    <string name="country_code">Country code</string>
    <string name="telephone_number">Telephone number</string>
    <string name="hint_telehone_number">0123456789</string>

    <string name="title_sepa">SEPA Direct Debit</string>
    <string name="title_qiwi_wallet">Qiwi Wallet</string>
    <string name="direct_debit_consent">I agree that the amount below will be debited from my bank account.</string>
    <string name="title_giropay" translatable="false">Giropay</string>
    <string name="giropay_search_field_hint">Bankname / BIC / Bankleitzahl</string>
    <string name="min_3_chars">Min. 3 characters</string>

    <string name="cancel_button">Cancel</string>
    <string name="title_verify_card">Verify your card</string>

    <string name="preferred_payment_methods_label">Your payment methods</string>
    <string name="other_payment_methods_label">Select other method</string>
    <string name="cvc_extended_hint_with_last_digits">Please enter the CVC code for %1$s</string>

    <string name="giropay_example" translatable="false">Deutsche Bank PGK Berlin 10883 Berlin (10070024 / DEUTDEDBBER)</string>
    <string name="example">Example:</string>
    <string name="font_sans_serif_light" translatable="false">sans-serif-light</string>

</resources>
