<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layout_pay"
        android:layout_alignParentBottom="true"
        android:layout_margin="22dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/adyenRoundCheckoutButton"
                android:padding="20dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pay_giropay_button"
                android:enabled="false"/>

        </FrameLayout>

        <TextView
            android:textSize="20sp"
            android:id="@+id/amount_text_view"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:indeterminateDrawable="@drawable/get_paid_progress_bar"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/processing_progress_bar"
            android:indeterminate="true"
            android:visibility="invisible"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_above="@id/layout_pay"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_marginTop="22dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:paddingLeft="22dp"
                android:paddingRight="22dp"
                android:paddingTop="22dp"
                android:paddingBottom="17dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/giropay_search_field_hint"
                    android:id="@+id/credit_card_no_label"
                    android:textSize="12sp" />

                <com.adyen.ui.views.GiroPayEditText
                    android:id="@+id/adyen_giropay_lookup_edit_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/min_3_chars"
                    android:inputType="textCapWords|textNoSuggestions"
                    android:drawablePadding="12dp"
                    android:gravity="center_vertical" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/giropay_example_layout"
            android:orientation="vertical"
            android:padding="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/example"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="4dp"
                android:text="@string/giropay_example"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ListView
                android:isScrollContainer="false"
                android:choiceMode="singleChoice"
                android:background="@color/white"
                android:id="@+id/giropay_list_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </ListView>

            <com.adyen.ui.views.loadinganimation.ThreeDotsLoadingView
                style="@style/LoadingAnimationView"
                android:visibility="invisible"
                android:layout_centerHorizontal="true"
                android:id="@+id/loading_icon_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
