<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    android:fadingEdge="none"
    android:adjustViewBounds="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/background_light_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_marginTop="22dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View style="@style/Divider" />

            <LinearLayout
                android:paddingLeft="22dp"
                android:paddingRight="22dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:paddingTop="22dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/country_code"
                        android:id="@+id/country_code_title"
                        android:textSize="12sp" />

                    <Spinner
                        android:id="@+id/country_code_spinner"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_marginBottom="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                    />

                </LinearLayout>

                <LinearLayout
                    android:paddingTop="22dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/telephone_number"
                        android:id="@+id/telephone_number_label"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/telephone_number_edit_text"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_telehone_number"
                        android:inputType="number"
                        android:focusable="true" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View style="@style/Divider" />

            <RelativeLayout
                android:layout_margin="22dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.adyen.ui.views.CheckoutButton
                        style="@style/adyenRoundCheckoutButton"
                        android:padding="20dp"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/collect_direct_debit_data"
                        android:enabled="false"/>

                </FrameLayout>

                <TextView
                    android:textSize="20sp"
                    android:id="@+id/amount_text_view"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ProgressBar
                    android:indeterminateDrawable="@drawable/get_paid_progress_bar"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/processing_progress_bar"
                    android:indeterminate="true"
                    android:visibility="invisible"/>

            </RelativeLayout>

    </LinearLayout>

</ScrollView>